<resources>
    <string name="app_name">Victor Events</string>

    <!-- Main activity. -->
    <string name="main_activity_dismiss_event">Do you want to dismiss event data?</string>

    <!-- Event list fragment. -->
    <string name="events_list_action_login">Log in</string>
    <string name="events_list_action_log_out">Log out</string>
    <string name="events_list_action_comms">Communities</string>
    <string name="events_list_action_add_comm">Add a community</string>
    <string name="events_list_action_system_messages">System Messages</string>
    <string name="events_list_action_about">About</string>
    <string name="events_list_no_events">There are currently no events.</string>

    <!-- Add comm fragment -->
    <string name="add_comm_label">Add a community</string>
    <string name="add_comm_please_search_empty">You are currently not following any communities. Please seek them.</string>
    <string name="add_comm_please_search">Please seek communities to follow.</string>
    <string name="add_comm_searching">Searching…</string>
    <string name="add_comm_not_found">Community called [name] is not found.</string>
    <string name="add_comm_can_create">You can create one</string>
    <string name="add_comm_create">Create</string>
    <string name="searchable_add_community">Add a community</string>
    <string name="searchable_add_community_hint">Community name</string>
    <string name="add_comm_login_to_create">You can log in to create one</string>
    <string name="add_comm_login">Login</string>
    <string name="add_comm_created">Created community: [name].</string>
    <string name="add_comm_joined">Joined a community: [name].</string>
    <string name="add_comm_already_a_member">You are already a member of that community.</string>
    <string name="add_comm_action_search">Search</string>
    <string name="add_comm_connection_problem">Connection problem.</string>

    <!-- Comm list fragment -->
    <string name="comm_list_label">Communities</string>
    <string name="comm_list_no_comms">There are currently no communities.</string>
    <string name="comm_list_leave">Left a community: [name].</string>
    <string name="comm_list_undo">Undo</string>

    <!-- Comm details fragment -->
    <string name="comm_details_label" translatable="false" />
    <string name="comm_details_name">Name</string>
    <string name="comm_details_description">Description</string>
    <string name="comm_details_add_admin">Add an admin</string>

    <!-- Admin add fragment -->
    <string name="admin_add_label">Add an admin</string>
    <string name="admin_add_address">Address</string>
    <string name="admin_add_prompt">Enter e-mail address of the new admin.\n\nThe address entered is not validated. You may enter any string. If someone logs in with this address, they will be recognized as one of the admins of your community.\n\nThe address you enter now cannot be deleted unless you delete your community.</string>
    <string name="admin_add_toast">Granted admin status.</string>

    <!-- Comm edit fragment -->
    <string name="comm_edit_label">Edit community</string>
    <string name="comm_edit_name">Name</string>
    <string name="comm_edit_description">Description</string>
    <string name="comm_edit_updated">Updated: [name]</string>

    <!-- Comm delete fragment -->
    <string name="comm_delete_label" translatable="false" />
    <string name="comm_delete_title">Delete: [name]</string>
    <string name="comm_delete_prompt">Delete the community: [name].\n (This action cannot be undone).</string>
    <string name="comm_delete_toast">Deleted: [name]</string>

    <!-- System messages fragment -->
    <string name="system_messages_label">System Messages</string>
    <string name="system_messages_no_messages">There are currently no System Messages.</string>
    <string name="system_message_comm_deleted">Community deleted: [name].</string>

    <!-- Event create fragment -->
    <string name="create_event_comm">Community</string>
    <string name="create_event_name">Name</string>
    <string name="create_event_date">Date</string>
    <string name="create_event_time">Time</string>
    <string name="create_event_desc">Description (optional)</string>
    <string name="create_event_location">Location (optional)</string>
    <string name="create_event_cant_be_empty">Can\'t be empty</string>

    <!-- Event details fragment -->
    <string name="event_details_label" translatable="false" />
    <string name="event_details_comm">Community</string>
    <string name="event_details_name">Name</string>
    <string name="event_details_date">Date</string>
    <string name="event_details_time">Time</string>
    <string name="event_details_desc">Description</string>
    <string name="event_details_location">Location</string>

    <!-- Login activity -->
    <string name="login_label">Login</string>
    <string name="login_authentication_failed">Authentication failed.</string>
    <string name="login_loading">Loading…</string>
    <string name="login_please_log_in">Please log in.</string>
    <string name="login_google_play_services_error">Google Play Services error.</string>

    <!-- Login confirmation fragment -->
    <string name="login_confirmation_label">Login</string>
    <string name="login_confirmation_prompt">You do not need to log in to use the app. Only log in if you want to create a new community or add events to an existing community.</string>
    <string name="login_confirmation_button">Log in</string>
    <string name="login_confirmation_privacy_policy">View privacy policy</string>
    <string name="login_confirmation_privacy_uri" translatable="false">https://github.com/syrop/Victor-Events/blob/master/PRIVACY.md</string>

    <!-- Log out confirmation fragment -->
    <string name="log_out_confirmation_label">Log out</string>
    <string name="log_out_confirmation_prompt">You do not need to be logged in if you only want to follow communities.\n\nBeing logged in only helps when you want to create or edit communities or events. Please confirm if you want to log out.</string>
    <string name="log_out_confirmation_button">Log out</string>

    <!-- Pick location fragment -->
    <string name="pick_location_label">Select location</string>
    <string name="pick_location_select_location">Select location of your event</string>

    <!-- About fragment -->
    <string name="about_label">About</string>
    <string name="about_version">ver. [ver]</string>
    <string name="about_developer">Developer: Wiktor Nizio</string>
    <string name="about_github">View on GitHub</string>
    <string name="about_github_url" translatable="false">https://github.com/syrop/Victor-Events</string>
    <string name="about_donate_btc">Donate BTC:</string>
    <string name="about_btc_address" translatable="false">bc1qncxh5xs6erq6w4qz3a7xl7f50agrgn3w58dsfp</string>
    <string name="title_instant">Module Title</string>
</resources>
