<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comm"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:importantForAutofill="noExcludeDescendants"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/event_details_comm"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/comm_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:importantForAutofill="noExcludeDescendants"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/event_details_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/event_details_time"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/time_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/event_details_date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/event_details_desc"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/desc_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/event_details_location"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/address_layout"
        android:visibility="gone"
        tools:visibility="visible">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

</RelativeLayout>