<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@+id/eventsFragment">

    <fragment
        android:id="@+id/eventsFragment"
        android:name="pl.org.seva.events.event.EventsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_eventsFragment_to_createEventFragment"
            app:destination="@id/createEventFragment"/>
        <action
            android:id="@+id/action_eventsFragment_to_addCommFragment"
            app:destination="@id/addCommFragment"/>
        <action
            android:id="@+id/action_eventsFragment_to_loginConfirmationFragment"
            app:destination="@id/loginConfirmationFragment"/>
    </fragment>

    <fragment
        android:id="@+id/createEventFragment"
        android:name="pl.org.seva.events.event.CreateEventFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_create_event">
        <action
            android:id="@+id/action_createEventFragment_to_locationPickerFragment"
            app:destination="@id/locationPickerFragment"/>
    </fragment>

    <fragment
        android:id="@+id/addCommFragment"
        android:name="pl.org.seva.events.comm.AddCommFragment"
        android:label="@string/add_comm_label"
        tools:layout="@layout/fragment_add_comm"/>
    <fragment
        android:id="@+id/loginConfirmationFragment"
        android:name="pl.org.seva.events.login.LoginConfirmationFragment"
        android:label="@string/login_question_label"
        tools:layout="@layout/fragment_login_confirmation"/>

    <fragment
        android:id="@+id/locationPickerFragment"
        android:name="pl.org.seva.events.event.LocationPickerFragment"
        android:label="@string/pick_location_label"
        tools:layout="@layout/fragment_location_picker"/>

</navigation>
